test changes, readme file and postman collection updates

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,7 +15,11 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
   cache:
-    type: simple
+    type: none
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.redis.RedisReactiveAutoConfiguration
 
 logging:
   level:
